<resources>
    <string name="app_name">Android_Thirty_Days_Challenge</string>
    <string name="paragraph">When sadness grips us, it often feels like a heavy fog settling over our hearts, obscuring the light and muffling the sounds of joy. It’s that profound sense of loss, of something or someone slipping away, leaving behind only echoes of what once was. Life, once vibrant and full of possibility, suddenly seems muted, every color dimmed by the weight of our own melancholy. The world moves on, indifferent to the grief that wraps itself around us like a shroud, and we’re left to navigate the emptiness alone. Every breath feels like an effort, every step a struggle, as we carry the invisible burden of our sorrows. Memories become both a comfort and a curse, reminding us of moments we can never relive, of people we can never see again, of words left unsaid. And in the quiet hours of the night, when the world sleeps, that sadness whispers in our ears, reminding us of all we’ve lost, all we’ll never have, and all the dreams that now lie shattered at our feet. Sadness often brings with it a profound sense of isolation. It’s like being trapped in a room with no doors or windows, just four walls closing in, suffocating in their silence. You scream, but no one hears; you cry, but no one comes. The world continues to spin, but you’re stuck, suspended in time, unable to move forward, unable to go back. It’s in these moments that we realize how fragile happiness truly is, how easily it can be taken from us, leaving nothing but an aching void. People tell us to move on, to let go, to find the silver lining, but sometimes, there is no silver lining. Sometimes, all there is is the sadness, raw and unfiltered, gnawing away at our insides until there’s nothing left but a hollow shell. The pain doesn’t just go away; it lingers, festers, grows until it’s all-consuming, until it becomes a part of who we are, a permanent scar etched into our souls.</string>
    <string name="open_web_page">Open Web Page</string>
    <string name="open_camera">Open Camera</string>
    <string name="implicit_intent_demo">Implicit Intent Demo</string>
    <string name="web_views_demo">Web Views Demo</string>
    <string name="click_me">Click Me</string>
    <string name="nameInput">Enter your name</string>
    <string name="sign_up_screen">Sign Up Screen</string>
    <string name="example_name">eg. John Doe</string>
    <string name="eg_password">eg. Password</string>
    <string name="eg_email">example@domain.com</string>
    <string name="sign_up_button">Sign Up</string>
</resources>